[package]
name = "xclip"
version = "1.0.0"
description = "A Cross-Platform Clipboard"
documentation = "https://github.com/RyoLee/XClip-cliente"
license = "BSD 3-Clause"
readme = "README.md"
keywords = ["XClip", "Clipboard", "Cross-Platform"]
authors = ["Ryo <516127941@qq.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
base64 = "0.13.0"
curl = "0.4.34"
md5 ="0.7.0"
rust-ini="0.16.1"
clipboard="0.5.0"